remove tree-based repository, service, and entity classes; refactor manuscript info part for branch token count type conversion