@@ -3,11 +3,12 @@ package com.github.enerccio.marginalia.domain.repository.impl;
 import com.github.enerccio.marginalia.domain.model.impl.ChatMessage;
 import com.github.enerccio.marginalia.domain.model.impl.Manuscript;
 import com.github.enerccio.marginalia.domain.repository.ChatMessageRepository;
+import jakarta.persistence.TypedQuery;
 
 import java.util.Collections;
 import java.util.List;
 
-public class JpaChatMessageRepository extends JpaTreeEntityRepository<ChatMessage> implements ChatMessageRepository {
+public class JpaChatMessageRepository extends JpaExtendableRepository<ChatMessage> implements ChatMessageRepository {
 
     @Override
     protected Class<ChatMessage> getEntityClass() {
@@ -16,8 +17,8 @@ public class JpaChatMessageRepository extends JpaTreeEntityRepository<ChatMessag
 
     @Override
     @SuppressWarnings("unchecked")
-    public List<ChatMessage> findBranchFromLeaf(Long leafId) throws Exception {
-        if (leafId == null) {
+    public List<ChatMessage> findBranchFromLeaf(ChatMessage leaf) throws Exception {
+        if (leaf == null) {
             return Collections.emptyList();
         }
 
@@ -34,36 +35,63 @@ public class JpaChatMessageRepository extends JpaTreeEntityRepository<ChatMessag
 
         List<ChatMessage> results = getEntityManager()
                 .createNativeQuery(sql, ChatMessage.class)
-                .setParameter("leafId", leafId)
+                .setParameter("leafId", leaf.getId())
                 .getResultList();
 
-        // Native CTE traverses bottom-up; reverse to return chronological root-to-leaf order
         Collections.reverse(results);
         return results;
     }
 
     @Override
-    public List<ChatMessage> findAllLeavesForManuscript(Long manuscriptId) throws Exception {
-        if (manuscriptId == null) {
-            return Collections.emptyList();
+    public List<ChatMessage> findChildren(ChatMessage parent) throws Exception {
+        if (parent == null) {
+            return List.of();
         }
+        TypedQuery<ChatMessage> query = entityManager.createQuery(
+                "SELECT m FROM ChatMessage m WHERE m.parent = :parent AND m.deleted = false ORDER BY m.creation ASC",
+                ChatMessage.class
+        );
+        query.setParameter("parent", parent);
+        return query.getResultList();
+    }
 
-        String jpql = """
-                SELECT m FROM ChatMessage m
-                WHERE m.parentScript.id = :manuscriptId
-                  AND m.deleted = false
-                  AND NOT EXISTS (
-                      SELECT c FROM ChatMessage c
-                      WHERE c.parent.id = m.id
-                        AND c.deleted = false
-                  )
-                ORDER BY m.id ASC
-                """;
+    @Override
+    public List<ChatMessage> findRootMessages(Manuscript manuscript) throws Exception {
+        if (manuscript == null) {
+            return List.of();
+        }
+        TypedQuery<ChatMessage> query = entityManager.createQuery(
+                "SELECT m FROM ChatMessage m WHERE m.parentScript = :script AND m.parent IS NULL AND m.deleted = false ORDER BY m.creation ASC",
+                ChatMessage.class
+        );
+        query.setParameter("script", manuscript);
+        return query.getResultList();
+    }
 
-        return getEntityManager()
-                .createQuery(jpql, ChatMessage.class)
-                .setParameter("manuscriptId", manuscriptId)
-                .getResultList();
+    @Override
+    public List<ChatMessage> findAllByManuscript(Manuscript manuscript) throws Exception {
+        if (manuscript == null) {
+            return List.of();
+        }
+        TypedQuery<ChatMessage> query = entityManager.createQuery(
+                "SELECT m FROM ChatMessage m WHERE m.parentScript = :script AND m.deleted = false ORDER BY m.creation ASC",
+                ChatMessage.class
+        );
+        query.setParameter("script", manuscript);
+        return query.getResultList();
+    }
+
+    @Override
+    public void reparentChildren(ChatMessage targetNode, ChatMessage newParent) throws Exception {
+        if (targetNode == null) {
+            return;
+        }
+        entityManager.createQuery(
+                        "UPDATE ChatMessage m SET m.parent = :newParent WHERE m.parent = :targetNode"
+                )
+                .setParameter("newParent", newParent)
+                .setParameter("targetNode", targetNode)
+                .executeUpdate();
     }
 
     @Override
@@ -73,7 +101,7 @@ public class JpaChatMessageRepository extends JpaTreeEntityRepository<ChatMessag
 
     @Override
     public List<Long> getAllMessages(Manuscript manuscript) throws Exception {
-        return getEntityManager().createQuery("SELECT m.id FROM ChatMessage m WHERE m.parentScript = ?1 AND m.deleted = false ORDER BY m.tree", Long.class)
+        return getEntityManager().createQuery("SELECT m.id FROM ChatMessage m WHERE m.parentScript = ?1 AND m.deleted = false ORDER BY m.creation", Long.class)
                 .setParameter(1, manuscript)
                 .getResultList();
     }
@@ -101,5 +129,7 @@ public class JpaChatMessageRepository extends JpaTreeEntityRepository<ChatMessag
                 .getSingleResult();
         return result != null ? result.intValue() : 0;
     }
+
+
 
 }
